# simulated-annealing

./: .gitignore  CMakeLists.txt  Makefile  README.md  run_csa  run_on_gpu.sh  timings.csv  timings_msa.csv
outputs/: gpu_report.nsys-rep  gpu_report.sqlite  with_gpu.err  with_gpu.out
scripts/: build.sh  run_cuda.sh  test.sh
src/: main.cpp  main.cu
src/anneal/: CMakeLists.txt  anneal.hpp  anneal_csa.hpp  anneal_csa_st.hpp  anneal_cuda.hpp  anneal_msa.hpp  anneal_msa_st.hpp  anneal_omp.hpp  context.hpp
src/graph/: CMakeLists.txt  graph.cpp  graph.h  trafficGraph.cpp  trafficGraph.h
src/qubo/: CMakeLists.txt  qubo.cpp  qubo.h  quboSolver.cpp  quboSolver.h
src/schwefel/: schwefel.hpp  schwefel_cuda  schwefel_cuda.cu  schwefel_cuda.hpp
src/traffic/: graph.cpp  traffic.cpp  traffic.h
tests/: CMakeLists.txt  graph_init_test.cpp  graph_test.cpp  qubo_test.cpp  test_main.cpp  traffic_test.cpp
timings/: timings_csa.csv  timings_csa_st.csv  timings_msa.csv
timings/10/: timings_msa_st.csv
timings/100/: timings_csa.csv  timings_csa_st.csv  timings_msa.csv  timings_msa_st.csv
